--- a/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
+++ b/translations/kangyur/placeholders/090-028_toh584,940-the_incantation_that_captures_the_avatamsaka.xml
@@ -6,21 +6,25 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phal po che bzung ba'i gzungs/</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
-                <title type="mainTitle" xml:lang="en">The Incantation that Captures the Avataṃsaka</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī that Captures the Avataṃsaka</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che bzung bar 'gyur ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">phal po che gzung ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa phal po che gzung bar 'gyur ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-090-028"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh584" type="text">
                     <ref>Toh 584</ref>
                     <biblScope>vol.90, ff.204r-204r(pp.405-405)</biblScope>
-                    <location count-pages="1">
-                        <start volume="90" page="407"/>
-                        <end volume="90" page="407"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="90" start-page="405" end-page="405"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12317" work="W22084"/>
@@ -28,16 +32,15 @@
                 <bibl key="toh940" type="text">
                     <ref>Toh 940</ref>
                     <biblScope>vol.100, ff.282r-282r(563-563)</biblScope>
-                    <location count-pages="1">
-                        <start volume="100" page="565"/>
-                        <end volume="100" page="565"/>
+                    <location work="UT4CZ5369" count-pages="1">
+                        <volume number="100" start-page="563" end-page="563"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12702" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:24 by admin</note>
+                <note type="lastUpdated" date-time="2022-12-16T10:23:44.76Z" user="admin">16/12/2022 10:23:44</note>    <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:23:40.423Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
