--- a/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -20,11 +20,11 @@
                 <sponsor ref="sponsors.xml#sponsor-1">Kris Yao and Xiang-Jen Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.8 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-026-001"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T08:45:35.89Z" user="admin">07/07/2022 08:45:35</note>
+                <note type="lastUpdated" date-time="2022-12-19T07:26:52.15Z" user="admin">19/12/2022 07:26:52</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-11T09:22:31.551Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T08:40:05.134Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T08:42:25.994Z" user="line-tofte">Auto (update-contributors)</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="text-version" value="0.1.5" date-time="2022-01-24T13:37:05.095Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-07-07T08:45:28.289Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-07T08:45:28.289Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-12-19T07:26:46.42Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2022-12-19T07:26:46.42Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
