--- a/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -17,10 +17,11 @@
                 <editor role="reviser" ref="eft:person-139">John Canti</editor>
                 <consultant role="projectManager" ref="eft:person-139">John Canti</consultant>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <sponsor ref="sponsors.xml#sponsor-1">Kris Yao and Xiang-Jen Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -42,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-19T07:26:52.15Z" user="admin">19/12/2022 07:26:52</note>
+                <note type="lastUpdated" date-time="2022-12-19T07:30:44.814Z" user="admin">19/12/2022 07:30:44</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-11T09:22:31.551Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T08:40:05.134Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T08:42:25.994Z" user="line-tofte">Auto (update-contributors)</note>
@@ -54,6 +55,7 @@
                 <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-07T08:45:28.289Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-12-19T07:26:46.42Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-12-19T07:26:46.42Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2022-12-19T07:30:39.204Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
