--- a/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -18,10 +18,13 @@
                 <consultant role="projectManager" ref="eft:person-139">John Canti</consultant>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-95">Celso Wilkinson</editor>
+                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
                 <sponsor ref="sponsors.xml#sponsor-1">Kris Yao and Xiang-Jen Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2019</date>
+                <edition>v 0.1.11 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -43,7 +46,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-19T07:31:05.241Z" user="admin">19/12/2022 07:31:05</note>
+                <note type="lastUpdated" date-time="2022-12-19T07:56:40.638Z" user="admin">19/12/2022 07:56:40</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-11T09:22:31.551Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T08:40:05.134Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T08:42:25.994Z" user="line-tofte">Auto (update-contributors)</note>
@@ -57,6 +60,7 @@
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-12-19T07:26:46.42Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-12-19T07:30:39.204Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.10" date-time="2022-12-19T07:31:00.919Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.11" date-time="2022-12-19T07:56:34.926Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
