--- a/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/026-001_toh9-the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -24,11 +24,11 @@
                 <sponsor ref="sponsors.xml#sponsor-1">Kris Yao and Xiang-Jen Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2019</date>
+                <edition>v 0.1.12 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-026-001"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +46,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-19T07:56:40.638Z" user="admin">19/12/2022 07:56:40</note>
+                <note type="lastUpdated" date-time="2022-12-19T10:00:22.003Z" user="admin">19/12/2022 10:00:22</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-11T09:22:31.551Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T08:40:05.134Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.2" date-time="2021-04-15T08:42:25.994Z" user="line-tofte">Auto (update-contributors)</note>
@@ -61,6 +61,8 @@
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-12-19T07:30:39.204Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.10" date-time="2022-12-19T07:31:00.919Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.11" date-time="2022-12-19T07:56:34.926Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-12-19T10:00:16.312Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.1.12" date-time="2022-12-19T10:00:16.312Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
