--- a/translations/kangyur/translations/068-017_toh283_sutra_on_three_bodies.xml
+++ b/translations/kangyur/translations/068-017_toh283_sutra_on_three_bodies.xml
@@ -23,7 +23,7 @@
                 <editor role="TEImarkupEditor" ref="contributors.xml#person-306">Simeon Joffe</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 2.21.6 <date>2022</date>
+                <edition>v 2.21.7 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -55,13 +55,13 @@
             
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-17T17:20:41.492Z" user="admin">17/03/2022 17:20:41</note>
+                <note type="lastUpdated" date-time="2022-12-30T01:14:38.567Z" user="admin">30/12/2022 01:14:38</note>
             <note type="updated" update="text-version" value="v 2.21" date-time="2019-06-18T02:58:29.751Z" user="celso">v 2.21 2019</note>
 <note type="updated" update="text-version" value="v 2.21.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</note>
     <note type="updated" update="text-version" value="2.21.2" date-time="2020-11-23T14:16:59.523Z" user="admin">Auto (TEI migration 2.0.0)</note>
     <note type="updated" update="text-version" value="2.21.3" date-time="2020-12-11T12:25:08.822Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="2.21.4" date-time="2021-01-15T06:47:24.236Z" user="mike">2.21.4</note>
-    <note type="updated" update="text-version" value="2.21.5" date-time="2021-04-14T14:51:20.709Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="2.21.6" date-time="2022-03-17T17:20:37.52Z" user="celso">Fixed missing glossary link</note>
+    <note type="updated" update="text-version" value="2.21.5" date-time="2021-04-14T14:51:20.709Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="2.21.6" date-time="2022-03-17T17:20:37.52Z" user="celso">Fixed missing glossary link</note>    <note type="updated" update="text-version" value="2.21.7" date-time="2022-12-30T01:14:35.713Z" user="konchog">Several fixes throughout all sections, as part of review of early published texts.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -100,18 +100,18 @@
                     <milestone unit="chunk" xml:id="UT22084-068-017-3"/>
                     <p tid="4">The setting of this sūtra is Vulture Peak in Rajgir (Rājgṛha), said to be the location where the
                         Buddha, explaining the doctrine of emptiness in the second turning of the wheel of Dharma, taught the
-                            <foreign xml:lang="Sa-Ltn">prajñā­pāramitā</foreign> and other topics associated with Mahāyāna
+                            Prajñā­pāramitā and other topics associated with Mahāyāna
                         Buddhism. It is here that the bodhisattva Kṣitigarbha asks the Buddha a series of questions regarding the
                         body of the Buddha, which the Buddha answers by expounding the teaching on the three bodies.</p>
                     <milestone unit="chunk" xml:id="UT22084-068-017-4"/>
                     <p tid="5">The doctrine of the Buddha’s three bodies (<foreign type="term" xml:lang="Sa-Ltn">trikāya</foreign>) has tended to be associated with the Yogācāra school of Buddhist thought, although the
-                        terms dharmakāya and rūpakāya (form body) are certainly to be found in sūtras such as the <title xml:lang="Sa-Ltn">Aṣṭa­sāhasrikā­prajñā­pāramitā­sūtra</title>.<note place="end" xml:id="UT22084-068-017-53">
+                        terms dharmakāya and rūpakāya (“form body”) are certainly to be found in sūtras such as the <title xml:lang="Sa-Ltn">Aṣṭa­sāhasrikā­prajñā­pāramitā­sūtra</title>.<note place="end" xml:id="UT22084-068-017-53">
                             <ref rend="pending" target="https://read.84000.co/translation/toh12.html" inst="add bibl"/>For more on the philosophical considerations of the three bodies, see
-                            Harrison (1992) pp 44-94.</note> It has been suggested that sūtras such as the <title xml:lang="Sa-Ltn">Trikāyasūtra</title> may have evolved after such Yogācāra treatises as the <title xml:lang="Sa-Ltn">Mahā­yāna­sūtrālaṃkāra</title>.<note place="end" xml:id="UT22084-068-017-54">See Makransky (1997) pp.274.</note>
+                            Harrison (1992), pp. 44–94.</note> It has been suggested that sūtras such as the <title xml:lang="Sa-Ltn">Trikāyasūtra</title> may have evolved after such Yogācāra treatises as the <title xml:lang="Sa-Ltn">Mahā­yāna­sūtrālaṃkāra</title>.<note place="end" xml:id="UT22084-068-017-54">See Makransky (1997), p. 274.</note>
                         <ref rend="pending" inst="make new note or combine with this one" target="https://read.84000.co/translation/toh4020.html"/>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-068-017-5"/>
-                    <p tid="6">This tri-fold scheme can also be interpreted as describing different aspects of enlightenment or
+                    <p tid="6">This trifold scheme can also be interpreted as describing different aspects of enlightenment or
                         buddhahood itself. The dharmakāya, sometimes translated as the “truth body” or “reality body,” generally
                         refers to the essential nature of the Buddha, as is stated in this sūtra. The saṃbhogakāya and the
                         nirmāṇakāya, known collectively as the form bodies, are understood as emanations of the dharmakāya, or
@@ -120,8 +120,8 @@
                         Buddha takes for bodhisattvas and practitioners in meditative states or in dreams. The nirmāṇakāya,
                         sometimes translated as “manifestation body,” is the physical form of the Buddha that can be seen by any
                         sentient being. The Buddha, who is able to emanate in countless forms, does so in order to liberate beings
-                        through the illumination and demonstration of the Dharma. All three bodies<note place="end" xml:id="UT22084-068-017-55">Some Mahā­yāna works such as the Abhi­samayālaṃkāra of Maitreya also
-                            mention a fourth body, a svā­bhāvika­kāya, or “innate body.” There are conflicting interpretations by
+                        through the illumination and demonstration of the Dharma. All three bodies<note place="end" xml:id="UT22084-068-017-55">Some Mahā­yāna works such as the <title xml:lang="Sa-Ltn">Abhi­samayālaṃkāra</title> of Maitreya also
+                            mention a fourth body, a <foreign type="term" xml:lang="Sa-Ltn">svā­bhāvika­kāya</foreign>, or “innate body.” There are conflicting interpretations by
                             Indian and Tibetan commentators as to the relationship between the svā­bhāvika­kāya and the
                             dharma­kāya. For more on the four bodies, see Makransky (1997).</note> are ultimately considered
                         inseparable. </p>
@@ -129,7 +129,7 @@
                     <p tid="7">This is the only known sūtra in the Tibetan Kangyur solely dedicated to teaching the doctrine of
                         the three bodies. The Buddha explains here how one should view the bodies of the Buddha using analogies,
                         and relates the three bodies to other relevant Buddhist doctrines such as the four wisdoms.<note place="end" xml:id="UT22084-068-017-56">For information on the relationship between the
-                            three bodies and four wisdoms in Buddhist literature, see Brunnhölzl (2009) pp.71-76.</note>
+                            three bodies and four wisdoms in Buddhist literature, see Brunnhölzl (2009), pp. 71–76.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-068-017-7"/>
                     <p tid="8">This sūtra was first translated by W. Woodville Rockhill in his 1884 publication of <title xml:lang="en">The Life of the Buddha and the Early History of His Order</title>. There is currently no
@@ -158,7 +158,7 @@
                     <p tid="11">At that time, the bodhisattva Kṣitigarbha, who was sitting among the retinue, rose from his seat
                         and asked, “Has the Blessed One a body?”</p>
                     <p tid="12">The Blessed One replied, “Kṣitigarbha, the Blessed One, the Tathāgata, <ref cRef="F.56.b" type="folio" xml:id="UT22084-068-017-59"/> has
-                        three bodies: a dharmakāya, a saṃbhogakāya and a nirmāṇakāya. Son of a noble family, the three bodies of
+                        three bodies: a dharmakāya, a saṃbhogakāya, and a nirmāṇakāya. Son of a noble family, the three bodies of
                         the Tathāgata are these: the pure nature is the dharmakāya, pure meditative absorption is the
                         saṃbhogakāya, and pure conduct is the nirmāṇakāya of all buddhas.</p>
                     <milestone unit="chunk" xml:id="UT22084-068-017-11"/>
@@ -186,14 +186,14 @@
                     <p tid="18">The bodhisattva Kṣitigarbha then exclaimed to the Blessed One, “Blessed One, the noble Dharma that
                         I have heard from the Blessed One <ref cRef="F.57.a" type="folio" xml:id="UT22084-068-017-60"/> is excellent, Sugata, really excellent!”</p>
                     <p tid="19">The Blessed One then declared, “Son of a noble family, whoever fully upholds this Dharma discourse
-                        of the Blessed One will obtain merit that is immeasurable, inexpressible, incalculable and unfathomable.” </p>
+                        of the Blessed One will obtain merit that is immeasurable, inexpressible, incalculable, and unfathomable.” </p>
                     <milestone unit="chunk" xml:id="UT22084-068-017-15"/>
                     <p tid="20">When the Blessed One had spoken, the world, including the bodhisattva Kṣitigarbha, the gods,
-                        nāgas, yakṣas, and gandharvas rejoiced and praised the teachings of the Blessed One. </p>
+                        nāgas, yakṣas, and gandharvas, rejoiced and praised the teachings of the Blessed One. </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-068-017-16"/>
                     <trailer tid="21">This concludes the Noble Mahāyāna Sūtra, “<title xml:lang="en">The Three Bodies</title>.”<note place="end" xml:id="UT22084-068-017-57">The colophon makes no mention of who the Tibetan
-                        translators were, and the Degé catalogue (<title xml:lang="Bo-Ltn">dkar chag</title>, vol. 103,
+                        translators were, and the Degé catalog (<title xml:lang="Bo-Ltn">dkar chag</title>, vol. 103,
                         lak+Sh+mI, F.133.a.3)<ref rend="pending" target="https://read.84000.co/translation/toh4568-4.html" inst="133a"/> states that this is not known.</note>
                     </trailer>
                     
@@ -212,27 +212,27 @@
                 <head type="listBibl" tid="30">Bibliography</head>
                 <div type="section" xml:id="UT22084-068-017-listBibl-1">
                     <bibl xml:id="UT22084-068-017-18">
-                        <title xml:lang="Bo-Ltn">’phags pa sku gsum zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Ārya­trikāya­nāma­mahā­yāna­sūtra</title>). Toh 283. Degé Kangyur, vol. 68 (mdo sde,
+                        <title xml:lang="Bo-Ltn">’phags pa sku gsum zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Ārya­trikāya­nāma­mahā­yāna­sūtra</title>). Toh 283. Degé Kangyur vol. 68 (mdo sde,
                         ya), folios 56a–57a.</bibl>
                     <bibl xml:id="UT22084-068-017-19">
                         <title xml:lang="Bo-Ltn">’phags pa sku gsum zhes bya ba theg pa chen po’i mdo</title>. bka’ ’gyur (dpe
                         bsdur ma) [Comparative Edition of the Kangyur], krung go’i bod rig pa zhib ’jug ste gnas kyi bka’ bstan
                         dpe sdur khang (The Tibetan Tripiṭaka Collation Bureau of the China Tibetology Research Center). 108
-                        volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing House), 2006-2009,
-                        vol. 68 (mdo sde, ya), pp 168-170.</bibl>
-                    <bibl xml:id="UT22084-068-017-20">Brunnhölzl, Karl (2009). <title xml:lang="en">Luminous Heart: The Third
+                        volumes. Beijing: krung go’i bod rig pa dpe skrun khang (China Tibetology Publishing House), 2006–9,
+                        vol. 68 (mdo sde, ya), pp. 168–70.</bibl>
+                    <bibl xml:id="UT22084-068-017-20">Brunnhölzl, Karl. <title xml:lang="en">Luminous Heart: The Third
                             Karmapa on Consciousness, Wisdom, and Buddha Nature</title>. Ithaca: Snow Lion Publications,
                         2009.</bibl>
-                    <bibl xml:id="UT22084-068-017-21">Harrison, Paul (1992). “Is the Dharma-kāya the Real ‘Phantom Body’ of the
-                        Buddha?” In <title xml:lang="en">The Journal of the International Association for Buddhist Studies</title>
-                        Vol. 15 No 1, 1992. pp 44-94.</bibl>
-                    <bibl xml:id="UT22084-068-017-22">Makransky, John J. (1997). <title xml:lang="en">Buddhahood Embodied: Sources
+                    <bibl xml:id="UT22084-068-017-21">Harrison, Paul. “Is the Dharma-kāya the Real ‘Phantom Body’ of the
+                        Buddha?” <title xml:lang="en">The Journal of the International Association for Buddhist Studies</title>
+                        15, no. 1 (1992): 44–94.</bibl>
+                    <bibl xml:id="UT22084-068-017-22">Makransky, John J. <title xml:lang="en">Buddhahood Embodied: Sources
                             of Controversy in India and Tibet. </title>SUNY Series in Buddhist Studies. Albany: State University
                         of New York Press, 1997.</bibl>
                     <bibl xml:id="UT22084-068-017-23">Nagao, Gadjin M. <title xml:lang="en">Mādhyamika and Yogācāra: A Study of
-                            ‌Mahāyāna Philosophies</title>. Leslie S. Kawamura (Trans.) Albany: State University of New York,
+                            ‌Mahāyāna Philosophies</title>. Translated by Leslie S. Kawamura. Albany: State University of New York,
                         1991.</bibl>
-                    <bibl xml:id="UT22084-068-017-24">Rockhill, W. Woodville (Trans.) <title xml:lang="en">The Life of the Buddha
+                    <bibl xml:id="UT22084-068-017-24">Rockhill, W. Woodville, trans. <title xml:lang="en">The Life of the Buddha
                             and The Early History of His Order Derived from Tibetan Works in the Bkah-hgyur and
                             Bstan-hgyur</title>. London: Trübner &amp; Co., Ludgate Hill, 1884.</bibl>
                 </div>
@@ -255,7 +255,7 @@
                             <term xml:lang="Bo-Ltn">klu </term>
                             <term xml:lang="bo">ཀླུ།</term>
                             <term xml:lang="Sa-Ltn">nāga</term>
-                            <term type="definition">Snake-like mystical creature with supernatural powers belonging to the animal
+                            <term type="definition">Snake-like mystical creatures with supernatural powers, which belong to the animal
                                 realm.</term>
                         </gloss>
                     </item>
@@ -266,7 +266,7 @@
                             <term xml:lang="bo">ཆོས་ཀྱི་སྐུ།</term>
                             <term xml:lang="Sa-Ltn">dharmakāya</term>
                             <term type="definition">
-                                <term type="ignore">Dharmakāya</term> or body of dharma refers to the Buddha’s realization of reality.
+                                “Body of dharma”; refers to the Buddha’s realization of reality.
                                 Sometimes translated “truth body” or “reality body.” In other contexts, particularly in early
                                 texts, the term may also refer to the Buddha’s qualities as a collective whole, or to his
                                 teachings as embodying him.</term>
@@ -279,7 +279,7 @@
                             <term xml:lang="bo">ལོངས་སྤྱོད་རྫོགས་པའི་སྐུ།</term>
                             <term xml:lang="Sa-Ltn">saṃbhogakāya</term>
                             <term type="definition">
-                                <term type="ignore">Saṃbhogakāya</term> or body of enjoyment. Aspect of buddhahood perceptible to
+                                “Body of enjoyment.” Aspect of buddhahood perceptible to
                                 bodhisattvas.</term>
                         </gloss>
                     </item>
@@ -290,7 +290,7 @@
                             <term xml:lang="bo">སྤྲུལ་པའི་སྐུ།</term>
                             <term xml:lang="Sa-Ltn">nirmāṇakāya</term>
                             <term type="definition">
-                                <term type="ignore">Nirmāṇakāya</term> or body of manifestation. Aspect of buddhahood perceptible to
+                                “Body of manifestation.” Aspect of buddhahood perceptible to
                                 ordinary individuals with good karma.</term>
                         </gloss>
                     </item>
@@ -375,7 +375,7 @@
                             <term xml:lang="bo">གནོད་སྦྱིན།</term>
                             <term xml:lang="Sa-Ltn">yakṣa</term>
                             <term type="definition">
-                                <term type="ignore">Yakṣas</term> or harm givers. A class of mostly malevolent spirits.</term>
+                                “Harm givers.” A class of mostly malevolent spirits.</term>
                         </gloss>
                     </item>
                     <item>
@@ -385,9 +385,9 @@
                             <term xml:lang="bo">དྲི་ཟ།</term>
                             <term xml:lang="Sa-Ltn">gandharva</term>
                             <term type="definition">
-                                <term type="ignore">Gandharvas</term>, literally “smell-eaters,” are a class of spirits, sometimes
+                                Literally “smell eaters,” these are a class of spirits, sometimes
                                 described as celestial musicians. In other contexts the term can also refer to beings in the
-                                bardo-state.</term>
+                                bardo state.</term>
                         </gloss>
                     </item>
                     <item>
@@ -437,7 +437,7 @@
                             <term xml:lang="Bo-Ltn">gzugs kyi sku </term>
                             <term xml:lang="bo">གཟུགས་ཀྱི་སྐུ།</term>
                             <term xml:lang="Sa-Ltn">rūpakāya</term>
-                            <term type="definition">Used to refer to the two form bodies of the Buddha, i.e. the nirmāṇakāya and
+                            <term type="definition">Used to refer to the two form bodies of the Buddha, i.e., the nirmāṇakāya and
                                 the saṃbhogakāya.</term>
                         </gloss>
                     </item>
