--- a/translations/tengyur/placeholders/004-001_toh1185-kaumudipanjika.xml
+++ b/translations/tengyur/placeholders/004-001_toh1185-kaumudipanjika.xml
@@ -9,16 +9,21 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Kaumudī­nāma­pañjikā</title>
                 <title xml:lang="en" type="mainTitle">A Commentary on the Difficult Points called “The Water Lily”</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT23703-004-001"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1185" type="text">
                     <ref>Toh 1185</ref>
                     <biblScope>ff. 1v-58v</biblScope>
-                    <author xml:lang="Sa-Ltn" ref="eft:entity-14728">Durjayacandra</author>
-                    <author xml:lang="Sa-Ltn" role="translatorTib" ref="eft:entity-14732">Prajñendraruci</author>
-                    <author xml:lang="bo" role="translatorTib" ref="eft:entity-14725">ལོ་ཙ་བ་དགེ་སློང་ཤཀྱ་ཡེ་ཤེས།</author>
+                    <author ref="eft:entity-17549" xml:lang="Sa-Ltn">Durjayacandra</author>
+                    <author role="translatorTib" ref="eft:entity-17548" xml:lang="Sa-Ltn">Prajñendraruci</author>
+                    <author role="translatorTib" ref="eft:entity-17550" xml:lang="Bo-Ltn">lo tsa ba dge slong shakya ye shes</author>
                     <location work="UT23703" count-pages="115">
                         <volume number="4" start-page="2" end-page="116"/>
                     </location>
@@ -28,8 +33,10 @@
                 <link type="isCommentaryOf" target="toh417"/>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 10:27:39 by admin</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.3.xml" date-time="2021-03-26T10:04:54.502Z" user="admin"/>
+                <note type="lastUpdated" date-time="2023-01-04T11:37:35.901Z" user="admin">04/01/2023 11:37:35</note>
+                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin"/>
+                <note type="updated" update="translation-status" value="4" date-time="2023-01-04T11:37:31.69Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2023-01-04T11:37:31.69Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
